// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/CreditCardForm default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c5 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c6 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c6::-webkit-input-placeholder {
  color: #9194A7;
}

.c6::-moz-placeholder {
  color: #9194A7;
}

.c6:-ms-input-placeholder {
  color: #9194A7;
}

.c6::placeholder {
  color: #9194A7;
}

.c3 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 > div {
  padding-right: 1rem;
}

.c9 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c9 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={false}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={false}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
              disabled={false}
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c6"
                disabled={false}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={false}
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c6"
                disabled={false}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={false}
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c10"
  />
</div>
`;

exports[`Storyshots @components/organisms/CreditCardForm disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c7 {
  background-color: transparent;
  color: #7d7d7d;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #7d7d7d;
  border-radius: 4px;
  color: #7d7d7d;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: #7d7d7d;
  border-color: #7d7d7d;
}

.c5 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c6 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #7d7d7d;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c6::-webkit-input-placeholder {
  color: #9194A7;
}

.c6::-moz-placeholder {
  color: #9194A7;
}

.c6:-ms-input-placeholder {
  color: #9194A7;
}

.c6::placeholder {
  color: #9194A7;
}

.c3 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 > div {
  padding-right: 1rem;
}

.c9 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c9 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={true}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={true}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
              disabled={true}
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={true}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c6"
                disabled={true}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={true}
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            disabled={true}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c6"
                disabled={true}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={true}
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c10"
  />
</div>
`;

exports[`Storyshots @components/organisms/CreditCardForm error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c14 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c9 {
  color: #c22d74;
  font-size: 0.9rem;
}

.c10 {
  margin: 0;
}

.c7 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c12:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E84545;
  border-radius: 4px;
  color: #E84545;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c4:hover {
  color: #E84545;
  border-color: #E84545;
}

.c5 {
  position: relative;
  width: 100%;
  padding-right: 1.5rem;
}

.c13 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c13::-webkit-input-placeholder {
  color: #9194A7;
}

.c13::-moz-placeholder {
  color: #9194A7;
}

.c13:-ms-input-placeholder {
  color: #9194A7;
}

.c13::placeholder {
  color: #9194A7;
}

.c6 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #E84545;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
}

.c6::-webkit-input-placeholder {
  color: #9194A7;
}

.c6::-moz-placeholder {
  color: #9194A7;
}

.c6:-ms-input-placeholder {
  color: #9194A7;
}

.c6::placeholder {
  color: #9194A7;
}

.c3 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c8 {
  position: absolute;
  top: 100%;
}

.c1 {
  width: 100%;
}

.c2 {
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 > div {
  padding-right: 1rem;
}

.c11 > div:last-child {
  padding-right: 0;
}

@media (max-width:540px) {
  .c11 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:540px) {
  .c11 > div {
    padding-right: 0;
  }
}

<div
  className="c0"
>
  <form
    className="c1"
    onSubmit={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          disabled={false}
        >
          <div
            className="c5"
          >
            <input
              autoComplete="cc-number"
              autoFocus={true}
              className="c6"
              disabled={false}
              name="ccNumber"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value=""
            />
            <label
              className="c7"
              disabled={false}
            >
              Number
            </label>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              Wrong number
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c12"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-csc"
                className="c13"
                disabled={false}
                name="ccCsc"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={false}
              >
                CVC
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c12"
            disabled={false}
          >
            <div
              className="c5"
            >
              <input
                autoComplete="cc-exp"
                className="c13"
                disabled={false}
                name="ccExp"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseUp={[Function]}
                type="text"
                value=""
              />
              <label
                className="c7"
                disabled={false}
              >
                Expiry Date
              </label>
            </div>
          </div>
          <div
            className="c8"
          />
        </div>
      </div>
    </div>
  </form>
  <div
    className="c14"
  />
</div>
`;
